backport: re PR c++/13009 (Implicitly-defined assignment operator writes to wrong memory)

Backport from mainline
        2003-12-28  Mark Mitchell  <mark@codesourcery.com>

        PR c++/13009
        * call.c (build_special_member_call): Do not assume that we
        have a
        pointer to the complete object in an assignment operator.

From-SVN: r76257